...
                ScrollView {
                    Spacer().frame(height: 50)
                    VStack(spacing: 10) {
                                Text("View our plans!")
                                    .font(.title2)
                                    .fontWeight(.bold)
                                    .accessibilityIdentifier("pricingPage.title")
                                HStack(spacing: 10) {
                                    ForEach(PricingPlan.allCases, id: \.self) { plan in
                                        pricingButton(title: plan.rawValue, description: plan.description)
                                            .accessibilityIdentifier(plan.accessibilityId)
                                    }
                                }
...
                        .padding()
                        .frame(maxWidth: .infinity)
                        .background(Color.gray.opacity(0.2))
                        .cornerRadius(10)
                        .padding(.horizontal, 20)
                        .multilineTextAlignment(.center)
                        .accessibilityIdentifier("pricing.selectedPlan.label")
                }
            }
        }
    }
    
    /// Function to create the pricing plan buttons
...
